--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,9 +14,8 @@
     "resolveJsonModule": true,
     "isolatedModules": true,
     "noEmit": true,
-    "jsx": "react-jsx",
-    "plugins": [{ "name": "typescript-plugin-css-modules" }]
+    "jsx": "react-jsx"
   },
-  "include": ["src"],
+  "include": [".eslintrc.json", "src"],
   "references": [{ "path": "./tsconfig.node.json" }]
 }
